--- a/apache_site.yml
+++ b/apache_site.yml
@@ -11,28 +11,36 @@
 
 
   tasks:
-  - name: 0/0 -Check and Print Name OS
+  - name: 0/3 -Check and Print Name OS
     debug: var=ansible_os_family
 
-  - name: 1/3 -Install Apache-WebServer for RedHat.
-    yum: name=httpd state=latest
+  - block: # -===Block for RedHat===-
+
+      - name: 1/3 -Install Apache-WebServer for RedHat.
+        yum: name=httpd state=latest
+
+      - name: 2/3 -Copy my Page from local in to Server's
+        copy: src={{ source_file }} dest={{ distin_file }} mode=0555
+        notify: Restart Apache RedHat
+        become: yes
+    
+      - name: 3/3 -Start WebServer and Enable on boot in RedHat
+        service: name=httpd state=started enabled=yes
     when: ansible_os_family == "RedHat"
 
-  - name: 1/3 -Install Apache-WebServer for Debian.
-    apt: name=apache2 state=latest
-    when: ansible_os_family == "Debian"
 
-  - name: 2/3 -Copy my Page from local in to Server's
-    copy: src={{ source_file }} dest={{ distin_file }} mode=0555
-    notify: Restart Apache
-    become: yes
 
-  - name: 3/3 -Start WebServer and Enable on boot in RedHat
-    service: name=httpd state=started enabled=yes
-    when: ansible_os_family == "RedHat"
+  - block: # -===Block for Debian===-
 
-  - name: 3/3 -Start WebServer and Enable on boot in Debian
-    service: name=apache2 state=started
+      - name: 1/3 -Install Apache-WebServer for Debian.
+        apt: name=apache2 state=latest
+    
+      - name: 2/3 -Copy my Page from local in to Server's
+        copy: src={{ source_file }} dest={{ distin_file }} mode=0555
+        notify: Restart Apache Debian
+ 
+      - name: 3/3 -Start WebServer and Enable on boot in Debian
+        service: name=apache2 state=started
     when: ansible_os_family == "Debian"  
 
   handlers:
