--- a/install-docker/meta/main.yml
+++ b/install-docker/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: FantomBay
-  description: Install Docker (Ubuntu20*, RHEL)
+  description: Install Docker (Ubuntu20*, Debian, RHEL)
   company: none
 
   # If the issue tracker for your role is not on github, uncomment the
